Added gradle tasks